--- a/Week-2/C1_W2_Assignment.ipynb
+++ b/Week-2/C1_W2_Assignment.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "graded"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "Je3yV0Wnn5x8",
     "scrolled": true,
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "graded"
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "graded"
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "graded"
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -438,8 +438,7 @@
    ],
    "source": [
     "# Test your solution\n",
-    "w2_unittest.test_elementary_operations(MultiplyRow, AddRows, SwapRows)\n",
-    "# grade-up-to-here"
+    "w2_unittest.test_elementary_operations(MultiplyRow, AddRows, SwapRows)\n"
    ]
   },
   {
@@ -473,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "graded"
@@ -484,10 +483,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  1.           2.          -1.          -1.           3.        ]\n",
-      " [  3.          15.           3.           2.          65.        ]\n",
-      " [ 13.          62.          12.          10.         270.        ]\n",
-      " [  5.41176471  25.76470588   4.94117647   4.17647059 112.05882353]]\n"
+      "[[ 1.  2. -1. -1.  3.]\n",
+      " [ 0.  1.  4.  3. 22.]\n",
+      " [ 0.  0.  1.  3.  7.]\n",
+      " [-0. -0. -0.  1.  1.]]\n"
      ]
     }
    ],
@@ -495,7 +494,7 @@
     "def augmented_to_ref(A, b):    \n",
     "    ### START CODE HERE ###\n",
     "    # stack horizontally matrix A and vector b, which needs to be reshaped as a vector (4, 1)\n",
-    "    A_system = np.hstack((A, b.reshape((4, 1))))\n",
+    "    A_system = np.hstack((A, b.reshape(4, 1)))\n",
     "    \n",
     "    # swap row 0 and row 1 of matrix A_system (remember that indexing in NumPy array starts from 0)\n",
     "    A_ref = SwapRows(A_system,0,1)\n",
@@ -504,28 +503,28 @@
     "    A_ref = AddRows(A_ref,0,1,-2)\n",
     "    \n",
     "    # add row 0 of the new matrix A_ref to the row 2, replacing row 2\n",
-    "    A_ref = AddRows(A_ref,0,2,2)\n",
+    "    A_ref[2] += A_ref[0]\n",
     " \n",
     "    \n",
     "    # multiply row 0 of the new matrix A_ref by -1 and add it to the row 3\n",
     "    A_ref = AddRows(A_ref,0,3,-1)\n",
     "    \n",
     "    # add row 2 of the new matrix A_ref to the row 3, replacing row 3\n",
-    "    A_ref = AddRows(A_ref,2,3,3)\n",
+    "    A_ref[3] += A_ref[2] \n",
     "   \n",
     "    \n",
     "    # swap row 1 and 3 of the new matrix A_ref\n",
     "    A_ref = SwapRows(A_ref,1,3)\n",
     "    \n",
     "    # add row 2 of the new matrix A_ref to the row 3, replacing row 3\n",
-    "    A_ref = AddRows(A_ref,2,3,3)\n",
+    "    A_ref[3] += A_ref[2]\n",
     "    \n",
     "    \n",
     "    # multiply row 1 of the new matrix A_ref by -4 and add it to the row 2\n",
     "    A_ref = AddRows(A_ref,1,2,-4)\n",
     "    \n",
     "    # add row 1 of the new matrix A_ref to the row 3, replacing row 3\n",
-    "    A_ref = AddRows(A_ref,1,3,3)\n",
+    "    A_ref[3] += A_ref[1]\n",
     "    \n",
     "    \n",
     "    # multiply row 3 of the new matrix A_ref by 2 and add it to the row 2\n",
@@ -535,7 +534,7 @@
     "    A_ref = AddRows(A_ref,2,3,-8)\n",
     "    \n",
     "    # multiply row 3 of the new matrix A_ref by -1/17\n",
-    "    A_ref =MultiplyRow(A_ref,3,-1/17)\n",
+    "    A_ref[3] = A_ref[3] * -1/17\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return A_ref\n",
@@ -561,20 +560,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'row_num_1_multiple' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-041849f721e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your solution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw2_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_augmented_to_ref\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maugmented_to_ref\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/work/w2_unittest.py\u001b[0m in \u001b[0;36mtest_augmented_to_ref\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m    342\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    343\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtest_case\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_cases\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 344\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"input\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"A\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"input\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"b\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    345\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-17-c98cccf9f898>\u001b[0m in \u001b[0;36maugmented_to_ref\u001b[0;34m(A, b)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;31m# add row 2 of the new matrix A_ref to the row 3, replacing row 3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mA_ref\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAddRows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_ref\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mM_new\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow_num_2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow_num_1_multiple\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mM_new\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow_num_1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mM_new\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow_num_2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mM_new\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'row_num_1_multiple' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
@@ -622,27 +615,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0 3.0 4.0 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "### START CODE HERE ###\n",
     "\n",
     "# find the value of x_4 from the last line of the reduced matrix A_ref\n",
-    "x_4 = None\n",
+    "x_4 = A_ref[3, 3]\n",
+    "\n",
     "\n",
     "# find the value of x_3 from the previous row of the matrix. Use value of x_4.\n",
-    "x_3 = None\n",
+    "x_3 = A_ref[2, 4] -  A_ref[2, 3]* x_4\n",
     "\n",
     "# find the value of x_2 from the second row of the matrix. Use values of x_3 and x_4\n",
-    "x_2 = None\n",
-    "\n",
+    "x_2 = A_ref[1, 4] - A_ref[1, 2]*x_3 - A_ref[2, 3]*x_4\n",
     "# find the value of x_1 from the first row of the matrix. Use values of x_2, x_3 and x_4\n",
-    "x_1 = None\n",
+    "x_1 = A_ref[0, 4] - A_ref[0, 1]*x_2 + x_3 + x_4\n",
     "### END CODE HERE ###\n",
     "\n",
     "print(x_1, x_2, x_3, x_4)"
@@ -661,9 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your solution\n",
     "w2_unittest.test_solution_elimination(x_1, x_2, x_3, x_4)"
@@ -681,40 +690,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": [
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  0.  0.  2.]\n",
+      " [ 0.  1.  0.  0.  3.]\n",
+      " [ 0.  0.  1.  0.  4.]\n",
+      " [-0. -0. -0.  1.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "def ref_to_diagonal(A_ref):    \n",
     "    ### START CODE HERE ###\n",
     "    # multiply row 3 of the matrix A_ref by -3 and add it to the row 2\n",
-    "    A_diag = None\n",
+    "    A_diag = AddRows(A_ref, 3, 2, -3)\n",
     "    \n",
     "    # multiply row 3 of the new matrix A_diag by -3 and add it to the row 1\n",
-    "    A_diag = None\n",
+    "    A_diag = AddRows(A_diag, 3, 1, -3)\n",
     "    \n",
     "    # add row 3 of the new matrix A_diag to the row 0, replacing row 0\n",
-    "    A_diag = None\n",
+    "    A_diag[0] += A_diag[3]\n",
     "    \n",
     "    # multiply row 2 of the new matrix A_diag by -4 and add it to the row 1\n",
-    "    A_diag = None\n",
+    "    A_diag = AddRows(A_diag, 2, 1, -4)\n",
+    "    \n",
     "    \n",
     "    # add row 2 of the new matrix A_diag to the row 0, replacing row 0\n",
-    "    A_diag = None\n",
+    "    A_diag[0] += A_diag[2]\n",
     "    \n",
     "    # multiply row 1 of the new matrix A_diag by -2 and add it to the row 0\n",
-    "    A_diag = None\n",
+    "    A_diag = AddRows(A_diag, 1, 0, -2)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return A_diag\n",
     "    \n",
     "A_diag = ref_to_diagonal(A_ref)\n",
     "\n",
-    "print(A_diag)"
+    "print(A_diag)\n",
+    "\n",
+    "# grade upto here #"
    ]
   },
   {
@@ -733,9 +756,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your solution\n",
     "w2_unittest.test_ref_to_diagonal(ref_to_diagonal)"
