--- a/Course-2 Calculus for Machine Learning and Data Science/Week-2/C2_W2_Assignment.ipynb
+++ b/Course-2 Calculus for Machine Learning and Data Science/Week-2/C2_W2_Assignment.ipynb
@@ -1198,7 +1198,7 @@
   },
   "grader_version": "1",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1212,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -1234,5 +1234,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
