--- a/Course-2 Calculus for Machine Learning and Data Science/Week-3/Classification_with_Perceptron.ipynb
+++ b/Course-2 Calculus for Machine Learning and Data Science/Week-3/Classification_with_Perceptron.ipynb
@@ -1066,7 +1066,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "And train your neural network for $100$ iterations."
    ]
@@ -1101,7 +1103,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
